# pyetm

./: .coverage  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  running_notebooks.md
.semaphore/: semaphore.yml
examples/: advanced_scenario_example.ipynb  create_and_update_a_scenario.ipynb  create_or_query_scenarios.ipynb  custom_curve_from_df.ipynb  example.config.env  example.config.yml  example_helpers.py  example_input_excel.xlsx  excel_to_scenario.ipynb  excel_to_scenarios.ipynb  exploring_a_scenario.ipynb  fetch_curves.ipynb  fetch_inputs_example.ipynb  full_multi_scenario_flow.ipynb  get_info.ipynb  multi_scenario.ipynb  my_excel.xlsx  myc_notebook_for_tim.ipynb  scenario.ipynb  scenario_to_excel.ipynb  serialization_deserialization.ipynb  updating_a_scenario.ipynb
examples/advanced_examples/: advanced_scenario_example.ipynb
examples/curve_examples/: agriculture_electricity_curve.csv  electric_vehicle_profile_5_curve.csv  interconnector_8_price_curve.csv
examples/old_examples/: myc_notebook_for_tim.ipynb  scenario_to_excel.ipynb
inputs/: example_input_excel.xlsx
src/pyetm/client/: parameters.py
src/pyetm/clients/: __init__.py  async_base_client.py  async_session.py  base_client.py  session.py
src/pyetm/config/: config.py  output_curve_mappings.yml  settings.py
src/pyetm/models/: __init__.py  balanced_input.py  balanced_input_collection.py  base.py  carrier_curves.py  couplings.py  custom_curves.py  export_config.py  gqueries.py  input.py  input_collection.py  inputs.py  metadata.py  output_curves.py  scenario.py  scenario_packer.py  scenarios.py  sortable.py  sortable_collection.py  sortables.py  warnings.py
src/pyetm/scenario/: __init__.py  scenario.py
src/pyetm/services/: __init__.py  base_service.py  custom_curves.py  service_result.py
src/pyetm/utils/: excel.py  paths.py  singleton.py
tests/: conftest.py  test_client.py  test_pyetm_paths.py  test_settings.py
tests/fixtures/: interconnector_2_export_availability.csv
tests/models/: conftest.py  test_balanced_input.py  test_balanced_input_collection.py  test_base.py  test_carrier_curves.py  test_custom_curves.py  test_gqueries.py  test_input.py  test_input_collection.py  test_inputs.py  test_output_curves.py  test_scenario.py  test_scenario_packer.py  test_sortable.py  test_sortable_collection.py  test_sortables.py  test_warnings.py
tests/models/packables/: test_custom_curves_pack.py  test_gquery_pack.py  test_inputs_pack.py  (+4 more)
tests/services/: conftest.py  test_custom_curves_services.py  test_service_result.py
tests/utils/: test_excel.py
tmp/1340415/: interconnector_1_import_availability.csv
(+40 files in other folders)
