[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyetm"
version = "2.0"
description = "A Python package for energy transition modeling."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/quintel/pyetm"
repository = "https://github.com/quintel/pyetm"
documentation = "https://docs.energytransitionmodel.com/main/pyetm/introduction"
keywords = ["energy", "transition", "modeling", "api"]
packages = [{ include = "pyetm", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "*"
pandas = "*"
requests = "*"
python-dotenv = "*"
pyyaml = "*"
pydantic-settings = "*"
xlsxwriter = "*"
openpyxl = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
requests-mock = "*"
ipykernel = "*"
notebook = "*"
pytest-cov = "*"
pydeps = "*"

[tool.poetry.scripts]
pyetm = "pyetm.__main__:main"

[tool.poetry.urls]
"Issue tracker" = "https://github.com/quintel/pyetm/issues"
"Documentation" = "https://docs.energytransitionmodel.com/main/pyetm/introduction"

[tool.pytest.ini_options]
addopts = "--cov=pyetm --cov-report=term-missing"
testpaths = ["tests"]

[tool.pylint.main]
fail-under = 8.0
