[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "pyetm"
version = "2.0"
description = "Python-ETM Connector"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Nora Schinkel", email = "nora.schinkel@quintel.com" },
  { name = "Louis Parkes-Talbo", email = "louis.parkestalbot@quintel.com" }
]
keywords = ["energy", "transition", "modeling", "api", "ETM"]
requires-python = ">=3.12,<4.0"

dependencies = [
  "pydantic",
  "pandas",
  "requests",
  "python-dotenv",
  "pyyaml",
  "pydantic-settings",
  "xlsxwriter",
  "openpyxl",
  "aiohttp (>=3.12.15,<4.0.0)"
]

[project.scripts]
pyetm = "pyetm.__main__:main"

[project.urls]
"Repository"    = "https://github.com/quintel/pyetm"
"Documentation" = "https://docs.energytransitionmodel.com/main/pyetm/introduction"
"Issue tracker" = "https://github.com/quintel/pyetm/issues"

[tool.poetry]
packages = [{ include = "pyetm", from = "src" }]
include = ["LICENSE"]


[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
requests-mock = "*"
ipykernel = "*"
notebook = "*"
pytest-cov = "*"
pydeps = "*"



[tool.pytest.ini_options]
addopts = "--cov=pyetm --cov-report=term-missing"
testpaths = ["tests"]

[tool.pylint.main]
fail-under = 8.0
